--- a/templates/planning/index.html.twig
+++ b/templates/planning/index.html.twig
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col">
                 <div class="row">
-                    <div class="col-auto text-center">
+                    <div class="col-auto offset-2 text-center">
                         <div class="planning-archive-info text-center d-flex flex-column">
                             <div class="d-inline-flex justify-content-center text-center">
                                 <div class="secondary-square"></div>
@@ -30,8 +30,8 @@
         <div class="container position-relative">
             <div class="white-line">
             </div>
-            {% for i in [1,2,3] %}
-                {{ include('planning/event.html.twig', {odd: i is odd}) }}
+            {% for exposition in expositions %}
+                {{ include('planning/event.html.twig', {odd: loop.index is odd, exposition: exposition}) }}
             {% endfor %}
         </div>
     </div>
